--- a/FinalSemesterProject.Rmd
+++ b/FinalSemesterProject.Rmd
@@ -18,7 +18,7 @@ Our research question is can we determine if the boars’ average distance from 
 
 
 ## Data
-Data will be provided by ZHAW's Geoinformatics Research Group, through the course Patterns and trends in environmental data. The data has already been provided through coursework. The data files used were; wildschwein_BE, which are the positional data of collared wild boars, schreck_locations, which were the locations of the speakers, and schreck_agenda, which denotes the schedule for when the speakers were on or off
+Data will be provided by ZHAW's Geoinformatics Research Group, through the course Patterns and trends in environmental data. The data has already been provided through coursework. The data files used were; wildschwein_BE, which are the positional data of collared wild boars, schreck_locations, which were the locations of the speakers, and schreck_agenda, which denotes the schedule for when the speakers were on or off.
 
 ## Packages, data manipulation and exploration.
 
@@ -190,7 +190,6 @@ PigPile$NearestSpeakerStatusMax[PigPile$DatetimeUTC > PigPile$SpeakerOffMax] <- 
 ```
 
 
-
 ## Analysis and Plots
 
 Plotting each pig's distance from speakers in a single plot. 
@@ -200,6 +199,17 @@ ggplot(PigPile, mapping = aes(x = 'DatetimeUTC', group = 'TierName')) +
   xlim(min(x$DatetimeUTC), max(x$DatetimeUTC))
 
 ```
+
+However, after having recent difficulties with that plot, a second method was used to get an overview of pigs' distances from their closest speaker over time
+
+```{r}
+
+PigPile %>% 
+  ggplot(mapping = aes(x = DatetimeUTC, y = SpeakerDistance, color = TierName, na.rm = TRUE)) +
+  geom_smooth(method = "lm")
+
+```
+
 
 Plotting Each individual Pig to get a better look at their individual distances from their closest speaker
 Black bars indicate the pigs distance from their closest speaker, with the purple backdrop indicating when the speaker was turned ON. The blue line is a line of best fit. While derivative it helped me further visualize
